mutants.out.old/log/crates__umbra-core__src__matrix.rs_line_40_col_9.log

*** crates/umbra-core/src/matrix.rs:40:9: replace Matrix3::rotation_y -> Matrix3 with Default::default()

*** mutation diff:
--- crates/umbra-core/src/matrix.rs
+++ replace Matrix3::rotation_y -> Matrix3 with Default::default()
@@ -32,18 +32,17 @@
     /// x 軸まわりの座標回転 R1(θ)。
     pub fn rotation_x(theta: f64) -> Matrix3 {
         let (s, c) = theta.sin_cos();
         Matrix3::new([[1.0, 0.0, 0.0], [0.0, c, s], [0.0, -s, c]])
     }
 
     /// y 軸まわりの座標回転 R2(θ)。
     pub fn rotation_y(theta: f64) -> Matrix3 {
-        let (s, c) = theta.sin_cos();
-        Matrix3::new([[c, 0.0, -s], [0.0, 1.0, 0.0], [s, 0.0, c]])
+        Default::default() /* ~ changed by cargo-mutants ~ */
     }
 
     /// z 軸まわりの座標回転 R3(θ)。
     pub fn rotation_z(theta: f64) -> Matrix3 {
         let (s, c) = theta.sin_cos();
         Matrix3::new([[c, s, 0.0], [-s, c, 0.0], [0.0, 0.0, 1.0]])
     }
 


*** /usr/local/rustup/toolchains/1.96.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --package=umbra-core@0.0.0
[1m[92m       Fresh[0m unicode-ident v1.0.24
[1m[92m       Fresh[0m proc-macro2 v1.0.106
[1m[92m       Fresh[0m quote v1.0.45
[1m[92m       Fresh[0m syn v2.0.117
[1m[92m       Fresh[0m thiserror-impl v2.0.18
[1m[92m       Fresh[0m thiserror v2.0.18
[1m[92m       Dirty[0m umbra-core v0.0.0 (/tmp/cargo-mutants-work-mG65dY.tmp/crates/umbra-core): the file `crates/umbra-core/src/matrix.rs` has changed (1781452403.264982004s, 1s after last build at 1781452402.888959608s)
[1m[92m   Compiling[0m umbra-core v0.0.0 (/tmp/cargo-mutants-work-mG65dY.tmp/crates/umbra-core)
[1m[92m     Running[0m `/usr/local/rustup/toolchains/1.96.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name umbra_core --edition=2021 crates/umbra-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --forbid=unsafe_code --warn=missing_debug_implementations '--warn=clippy::cast_precision_loss' '--warn=clippy::cast_possible_truncation' --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=5dee908a95c6f918 -C extra-filename=-023fb58edce5bb87 --out-dir /tmp/cargo-mutants-work-mG65dY.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-work-mG65dY.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-work-mG65dY.tmp/target/debug/deps --extern thiserror=/tmp/cargo-mutants-work-mG65dY.tmp/target/debug/deps/libthiserror-85db076080d1230b.rlib`
[1m[92m     Running[0m `/usr/local/rustup/toolchains/1.96.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name umbra_core --edition=2021 crates/umbra-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --forbid=unsafe_code --warn=missing_debug_implementations '--warn=clippy::cast_precision_loss' '--warn=clippy::cast_possible_truncation' --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=a80e8303726d4ac2 -C extra-filename=-2d760b0efc748f93 --out-dir /tmp/cargo-mutants-work-mG65dY.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-work-mG65dY.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-work-mG65dY.tmp/target/debug/deps --extern thiserror=/tmp/cargo-mutants-work-mG65dY.tmp/target/debug/deps/libthiserror-85db076080d1230b.rmeta`
[1m[91merror[E0277][0m[1m: the trait bound `Matrix3: Default` is not satisfied[0m
  [1m[94m--> [0mcrates/umbra-core/src/matrix.rs:40:9
   [1m[94m|[0m
[1m[94m40[0m [1m[94m|[0m         Default::default() /* ~ changed by cargo-mutants ~ */
   [1m[94m|[0m         [1m[91m^^^^^^^^^^^^^^^^^^[0m [1m[91mthe trait `Default` is not implemented for `Matrix3`[0m
   [1m[94m|[0m
[1m[96mhelp[0m: consider annotating `Matrix3` with `#[derive(Default)]`
   [1m[94m|[0m
[1m[94m16[0m [92m+ #[derive(Default)][0m
[1m[94m17[0m [1m[94m|[0m pub struct Matrix3 {
   [1m[94m|[0m

[1mFor more information about this error, try `rustc --explain E0277`.[0m
[1m[91merror[0m: could not compile `umbra-core` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/usr/local/rustup/toolchains/1.96.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name umbra_core --edition=2021 crates/umbra-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --forbid=unsafe_code --warn=missing_debug_implementations '--warn=clippy::cast_precision_loss' '--warn=clippy::cast_possible_truncation' --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=a80e8303726d4ac2 -C extra-filename=-2d760b0efc748f93 --out-dir /tmp/cargo-mutants-work-mG65dY.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-work-mG65dY.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-work-mG65dY.tmp/target/debug/deps --extern thiserror=/tmp/cargo-mutants-work-mG65dY.tmp/target/debug/deps/libthiserror-85db076080d1230b.rmeta` (exit status: 1)
[1m[33mwarning[0m: build failed, waiting for other jobs to finish...
[1m[91merror[E0277][0m[1m: the trait bound `matrix::Matrix3: Default` is not satisfied[0m
  [1m[94m--> [0mcrates/umbra-core/src/matrix.rs:40:9
   [1m[94m|[0m
[1m[94m40[0m [1m[94m|[0m         Default::default() /* ~ changed by cargo-mutants ~ */
   [1m[94m|[0m         [1m[91m^^^^^^^^^^^^^^^^^^[0m [1m[91mthe trait `Default` is not implemented for `matrix::Matrix3`[0m
   [1m[94m|[0m
[1m[96mhelp[0m: consider annotating `matrix::Matrix3` with `#[derive(Default)]`
   [1m[94m|[0m
[1m[94m16[0m [92m+ #[derive(Default)][0m
[1m[94m17[0m [1m[94m|[0m pub struct Matrix3 {
   [1m[94m|[0m

[1m[91merror[0m: could not compile `umbra-core` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/usr/local/rustup/toolchains/1.96.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name umbra_core --edition=2021 crates/umbra-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --forbid=unsafe_code --warn=missing_debug_implementations '--warn=clippy::cast_precision_loss' '--warn=clippy::cast_possible_truncation' --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=5dee908a95c6f918 -C extra-filename=-023fb58edce5bb87 --out-dir /tmp/cargo-mutants-work-mG65dY.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-work-mG65dY.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-work-mG65dY.tmp/target/debug/deps --extern thiserror=/tmp/cargo-mutants-work-mG65dY.tmp/target/debug/deps/libthiserror-85db076080d1230b.rlib` (exit status: 1)

*** result: Failure(101)
